Updated theme color and background color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
             
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="index.html" class="nav-link px-2 active">Home</a></li>
+                <li><a href="index.html" class="nav-link px-2 text-white active">Home</a></li>
                 <li><a href="feature.html" class="nav-link px-2 text-white">Features</a></li>
                 <li><a href="pricing.html" class="nav-link px-2 text-white">Pricing</a></li>
                 <li><a href="faq.html" class="nav-link px-2 text-white">FAQs</a></li>
@@ -29,7 +29,7 @@
         </div>
       </header>
   
-      <div class="px-4 py-5 my-5 text-center">
+      <div class="px-2 py-3 text-center">
         <img class="d-block mx-auto mb-4" src="Assets/cakes-1.jpg" alt="" width="72" height="57">
         <h1 class="display-5 fw-bold">Sydney Cake Shop</h1>
         <div class="col-lg-6 mx-auto">
