--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             </a>
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="index.html" class="nav-link px-2">Home</a></li>
+              <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
               <li><a href="feature.html" class="nav-link px-2 text-white">Features</a></li>
               <li><a href="pricing.html" class="nav-link px-2 text-white">Pricing</a></li>
               <li><a href="faq.html" class="nav-link px-2 text-white">FAQs</a></li>
